# ringnet

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  libuv.md
.github/: CODEOWNERS
app/: CMakeLists.txt
app/samples/: CMakeLists.txt
app/samples/benchmarks/: CMakeLists.txt
app/samples/benchmarks/include/: echoCLI.h  readerCLI.h  writerCLI.h
app/samples/benchmarks/include/asio_impl/: asioEchoClient.hpp  asioTcpReaderServer.hpp
app/samples/benchmarks/include/elio_impl/: elioEchoClient.hpp  elioTcpReaderServer.hpp  elioTcpWriterClient.hpp
app/samples/benchmarks/include/ringnet_impl/: ringnetEchoClient.hpp  ringnetEchoServer.hpp  ringnetTcpReaderServer.hpp  ringnetTcpWriterClient.hpp
app/samples/benchmarks/src/: asioEchoBenchmark.cpp  asioTcpReader.cpp  elioEchoBenchmark.cpp  elioTcpReader.cpp  elioTcpWriter.cpp  ringnetEchoBenchmark.cpp  ringnetTcpReader.cpp  ringnetTcpWriter.cpp
app/samples/benchmarks/src/asio_impl/: asioEchoClient.cpp  asioEchoServer.cpp  asioTcpReaderServer.cpp
app/samples/benchmarks/src/elio_impl/: elioTcpReaderServer.cpp  elioTcpWriterClient.cpp
app/samples/benchmarks/src/ringnet_impl/: ringnetTcpReaderServer.cpp  ringnetTcpWriterClient.cpp
app/samples/echo_benchmark/: CMakeLists.txt
app/samples/echo_benchmark/include/: chronoUtils.hpp  client.hpp  commandLineInterface.h  request.hpp  requestQueue.hpp  server.hpp  socket.hpp
app/samples/echo_benchmark/include/asio_impl/: client.hpp  server.hpp
app/samples/echo_benchmark/include/elio_impl/: elioEchoClient.hpp  elioEchoServer.hpp
app/samples/echo_benchmark/src/: asio_impl.cpp  elioEchoBenchmark.cpp  elio_impl.cpp  main.cpp
app/samples/echo_benchmark/src/asio_impl/: asioEchoClient.cpp  client.cpp  server.cpp
app/tests/: CMakeLists.txt
app/tests/include/: operators.hpp
app/tests/src/: tcp.cpp
include/elio/: errorHandler.hpp  eventHandler.hpp  eventLoop.hpp  events.hpp  operation.hpp  status.hpp  subscriber.hpp
include/elio/net/: acceptor.hpp  baseSocket.hpp  connection.hpp  connector.hpp  endpoint.hpp  resolver.hpp  socket.hpp  sockets.hpp  status.hpp
include/elio/net/tcp/: clientSocket.hpp  serverSocket.hpp
include/elio/time/: chronoUtils.hpp
include/elio/traits/: movable.hpp  reinterpretable.hpp
include/elio/uring/: bufferRing.hpp  pendingRequests.hpp  refContainer.hpp  request.hpp  requestContainer.hpp  requestPool.hpp  requestQueue.hpp  requests.hpp  submissionQueue.hpp
include/ringnet/: errorHandler.hpp  eventHandler.hpp  eventLoop.hpp  events.hpp
include/ringnet/net/: acceptor.hpp  connection.hpp  connector.hpp  endpoint.hpp  sockets.hpp
include/ringnet/time/: chronoUtils.hpp
include/ringnet/traits/: movable.hpp  reinterpretable.hpp
include/ringnet/uring/: bufferRing.hpp  pendingRequests.hpp  requestPool.hpp  requests.hpp  submissionQueue.hpp
scripts/: clang-format-all
src/elio/: eventLoop.cpp
src/elio/net/: connection.cpp  sockets.cpp
src/elio/uring/: submissionQueue.cpp
src/ringnet/: eventLoop.cpp
src/ringnet/net/: connection.cpp  sockets.cpp
src/ringnet/uring/: submissionQueue.cpp
